src/objects/Sales_Rep_Annual_Bonus__c.object
<CustomObject>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <summarizedField>Sales_Rep_Quarterly_Bonus__c.Gross_Profit__c</summarizedField>
        <summaryForeignKey>Sales_Rep_Quarterly_Bonus__c.Year__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <referenceTo>Commission_Profile__c</referenceTo>
        <relationshipLabel>Sales Rep Annual Bonuses</relationshipLabel>
        <relationshipName>Sales_Rep_Annual_Bonuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Rep Annual Bonus</label>
    <nameField>
        <displayFormat>SRA-{0000}</displayFormat>
        <label>Sales Rep Annual Bonus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Annual Bonuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>